--- a/jade/head.jade
+++ b/jade/head.jade
@@ -1,1 +1,35 @@
 //- jade head.jade
+.container-wrapper
+  .row.between.header.center.column-m
+    .header__col
+      a(href="").header__logo
+    .header__search
+      form(action="")
+        input(type="text", placeholder='Найти на сайте ...').form__input.form__input_547
+        input(type="submit", value='').form__input.button_icon
+    .header__menu
+      a(href="").header__menu__lnik Акции
+      a(href="").header__menu__lnik Коллекции
+      a(href="").header__menu__lnik События
+.menu-container
+  .container-wrapper
+    .menu__sandwitch
+      span.sw-topper
+      span.sw-bottom
+      span.sw-footer
+    ul.menu.row.between
+      li.menu__item
+        a(href="").menu__link Магазины
+      li.menu__item
+        a(href="").menu__link Женщинам
+      li.menu__item
+        a(href="").menu__link Мужчинам
+      li.menu__item
+        a(href="").menu__link Детям
+      li.menu__item
+        a(href="").menu__link Спрт
+      li.menu__item
+        a(href="").menu__link Красота
+      li.menu__item
+        a(href="").menu__link Бренды
+    ul.mobile__menu
