--- a/jade/index.jade
+++ b/jade/index.jade
@@ -8,5 +8,244 @@ html
     title Vitrina
   body
     .wrapper
-      include head.jade
+      header
+        include head.jade
+      section.section-slider
+        .container-wrapper.shadow
+          .row.flex__wrap.flex__reverse 
+            .col__290.col__290_border
+              .section-slider__top
+                .section-slider__brend
+                  img(src="images/brend.jpg", alt="")
+              .section-slider__bottom
+                span.section-slider__title Basconi
+                span.section-slider__title2 Сеть магазинов стильной
+                span.section-slider__title2 молодежной обуви
+              .section-slider__likes.row
+                span.section-slider__icon1 1500
+                span.section-slider__icon2 50
+            .col__76
+              .section-slider__slider
+                .section-slider__slides
+                  .slide
+                    img(src="images/slide.jpg", alt="")
+                  .slide
+                    img(src="images/slide.jpg", alt="")
+                  .slide
+                    img(src="images/slide.jpg", alt="")
+      section.section-geo
+        .container-wrapper.shadow
+          .row.flex__wrap 
+            .col__290
+              .section-geo__wrapper
+                a(href="").section-geo__a  http://www.historia-shop.by
+                .section-geo__geo.row.between
+                  a.section-geo__item(href="")
+                  a.section-geo__item(href="")
+                  a.section-geo__item(href="")
+                  a.section-geo__item(href="")
+                  a.section-geo__item(href="")
+                  a.section-geo__item(href="")
+            .col__77.col__auto_reset
+              .section-geo__top.row.between.column-m
+                span.js__tab.active ТЦ Замок
+                span.js__tab Минск, пр. Победителей, 17
+                span.js__tab ТЦ Столица
+                a(href="").section-geo__all-a.arrow1 Все адреса (33)
+              .section-geo__bottom
+                .js__cont.active
+                  .row.between.column-m
+                    .section-geo__row.row.center
+                      .section-geo__adr-icon
+                      span.section-geo__a Минск, ул. Чкалова, 35
+                    .section-geo__row.row.center
+                      .section-geo__adr-icon2
+                      .section-geo__adr-wrap
+                        span.section-geo__adr-dat +375 29 296-10-30
+                        span.section-geo__dat +375 17 296-10-30 
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon3
+                      span.secion-slider__dat Сегодня до 22.00
+                .js__cont.row.between
+                  .row.between.column-m
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon
+                      span.section-geo Минск, ул. Чкалова 33
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon2
+                      .section-geo__adr-wrap
+                        span.section-geo__adr-dat +375 29 296-10-30
+                        span.section-geo__dat +375 17 296-10-30 
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon3
+                      span.secion-slider__dat Сегодня до 22.00
+                .js__cont.row.between
+                  .row.between.column-m
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon
+                      span.section-geo Минск, ул. Чкалова 35
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon2
+                      .section-geo__adr-wrap
+                        span.section-geo__adr-dat +375 29 296-10-30
+                        span.section-geo__dat +375 17 296-10-30 
+                    .section-geo-row.row.center
+                      .section-geo__adr-icon3
+                      span.secion-slider__dat Сегодня до 22.00
+      section.section-rev
+        .container-wrapper.shadow
+          .section-rev__wrapper.row.between.center.column-m
+            a(href="").section-rev__link Витрика магазина
+            a(href="").section-rev__link Каталог
+            a(href="").section-rev__link Сертийикаты
+            a(href="").section-rev__link Адреса
+            a(href="").section-rev__link Отзывы
+            a(href="").button.button_pink Оставить отзыв
+      section.section-top
+        .container-wrapper.shadow
+          .section-top__title
+            a(href="").section-top__link.arrow Каталог магазина Conver
+          .section-top__content.row.flex__wrap
+            .col__950.row
+              .section-top__item
+                .section-top__img
+                  a(href="")
+                    img(src="images/item.jpg", alt="")
+                  .section-top__bwrap
+                    a(href="").button.button_pink.section-top__more.animated.fadeIn Подробнее
+                .section-top__cbot
+                  a(href="").section-top__name Босоножки Rylko
+                  span.section-top__price 560 000 руб.  
+                  span.section-top__discount 560 000 руб.  
+                  span.section-top__per -30%  
+              .section-top__item
+                .section-top__img
+                  a(href="")
+                    img(src="images/item.jpg", alt="")
+                  .section-top__bwrap
+                    a(href="").button.button_pink.section-top__more.animated.fadeIn Подробнее
+                .section-top__cbot
+                  a(href="").section-top__name Босоножки Rylko
+                  span.section-top__price 560 000 руб.  
+                  span.section-top__discount.section-top__discount_line-throu 560 000 руб.  
+                  span.section-top__per -30%  
+              .section-top__item
+                .section-top__img
+                  a(href="")
+                    img(src="images/item.jpg", alt="")
+                  .section-top__bwrap
+                    a(href="").button.button_pink.section-top__more.animated.fadeIn Подробнее
+                .section-top__cbot
+                  a(href="").section-top__name Босоножки Rylko
+                  span.section-top__price 560 000 руб.  
+                  span.section-top__discount 560 000 руб.  
+                  span.section-top__per -30%  
+              .section-top__item
+                .section-top__img
+                  a(href="")
+                    img(src="images/item.jpg", alt="")
+                  .section-top__bwrap
+                    a(href="").button.button_pink.section-top__more.animated.fadeIn Подробнее
+                .section-top__cbot
+                  a(href="").section-top__name Босоножки Rylko
+                  span.section-top__price 560 000 руб.  
+                  span.section-top__discount 560 000 руб.  
+                  span.section-top__per -30%  
+            .col__21.row
+              .section-top__ivent.row
+                span Блок “События”
+      section.section-collect
+        .container-wrapper.shadow
+          .section-top__title
+            h2.section__h2 Коллекции
+          .section-top__content
+            .section-top__info.row.between.column-m
+              span Коллекция верхней молодежной одежды
+              a(href="#") Рекламная кампания
+              a(href="#") Коллекция весна-лето 2016
+              a(href="#") Коллекция обуви осень-зима
+              a(href="#") Еще
+            .section-top__photo.row.between
+              a(href="").section-top__plink.col__17
+                img(src="images/img1.jpg", alt="")
+              a(href="").section-top__plink.col__24
+                img(src="images/img2.jpg", alt="")
+              a(href="").section-top__plink.col__15
+                img(src="images/img3.jpg", alt="")
+              a(href="").section-top__plink.col__22
+                img(src="images/img4.jpg", alt="")
+              a(href="").section-top__all.row.center-t
+                span Все фото
+      section.section-info
+        .container-wrapper.shadow
+          .section-top__title
+            h2.section__h2 Информаци о магазине
+          .section-top__content.row.column-m
+            .col__815
+              .text-wrap
+                p.text Сеть магазинов одежды Elema
+              .text-wrap
+                p.text Торговая марка “Elema” является одним из ведущих предприятий, выпускающих женскую одежду. Несмотря на то, что основной ассортимент товаров ориентирован на женщин, фабрика также выпускает мужские пальто и полупальто.
+              .text-wrap
+                p.text Товары «Elema» традиционно отличаются разнообразием и ориентированы на разные группы покупателей.  Коллекция, как правило, включает классические модели, модели для молодежи и специальную мужскую линию.
+              .text-wrap
+                p.text Сегодня товары марки «Elema» отвечают всем модным тенденциям. В каждом изделии вы можете найти необычный дизайн, утонченность кроя, интересный декор. Свежие решения в изготовлении каждой модели гарантируют покупателям бренда превосходный стиль и возможность создавать свой индивидуальный образ.
+              .text-wrap
+                p.text За всю историю бренда “Elema” он по достоинству был оценен не только покупателями, но и профессионалами, огромное количество дипломов, грамот и благодарностей тому подтверждение!  
+            .col__32
+              ul.section-collect__ul
+                li Вид магазина: 
+                  span Магазины одежды
+                li Специализация: 
+                  span Верхняя одежда
+                li Бренды: 
+                  span Elema
+                li Дисконтные карты: 
+                  span есть
+                li Юридическая информация: 
+                  span ОАО «ЭЛЕМА»  УНП: 100074549 220033, г. Минск, ул. Тростенецкая, 5 Свидетельство о государственной регистрации № 100074549 выдано 18.08.2000 Минским городским исполкомом
+      section.section-comments
+        .container-wrapper.shadow
+          .section-top__title
+            a(href="").section-top__link.arrow Отзывы о магазине Conver
+            span.section-top__link 142
+          .section-top__contents.row.column-m
+            .col__815
+              .section-comments__rev
+                span Светлана 
+                span 10.11.2015
+                .text-wrap
+                  p.text Здравствуйте! Подскажите, пожалуйста, есть ли в наличии туфли артикул 151В-2-3 размер 36-37? Какая цена? Спасибо
+              .section-comments__rev
+                span Светлана 
+                span 10.11.2015
+                .text-wrap
+                  p.text Здравствуйте! Подскажите, пожалуйста, есть ли в наличии туфли артикул 151В-2-3
+              .section-comments__rev
+                span Светлана 
+                span 10.11.2015
+                .text-wrap
+                  p.text Здравствуйте! Подскажите, пожалуйста, есть ли в наличии туфли артикул 151В-2-3
+              .section-comments__rev
+                span Светлана 
+                span 10.11.2015
+                .text-wrap
+                  p.text Здравствуйте! Подскажите, пожалуйста, есть ли в наличии туфли артикул 151В-2-3
+              .section-comments__rev
+                span Светлана 
+                span 10.11.2015
+                .text-wrap
+                  p.text Здравствуйте! Подскажите, пожалуйста, есть ли в наличии туфли артикул 151В-2-3
+            .col__32
+              form(action="")
+                label
+                  span.label__span Оставить отзыв о магазине Conver
+                  input(type="text", placeholder='Имя')
+                textarea.label__text(placeholder='Сообщение')
+                label
+                  span.label__span Укажите почту для получения ответа
+                  input(type="text", placeholder='Имя')
+                input(type="submit",value='Отправить').button.button_red
+      footer
+        .container-wrapper        
       include scripts.jade
