--- a/stylus/flex.styl
+++ b/stylus/flex.styl
@@ -17,7 +17,7 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
-.auto__width
+.col__auto
   flex-grow: 1;
   flex-basis: 0;
   max-width: 100%;
