--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,7 +13,7 @@ html
       section.section-slider
         .container-wrapper.shadow
           .row.flex__wrap.flex__reverse 
-            .col__290.col__290_border
+            .col__290.col__290_border.inline-flex
               .section-slider__top
                 .section-slider__brend
                   img(src="images/brend.jpg", alt="")
@@ -36,7 +36,7 @@ html
       section.section-geo
         .container-wrapper.shadow
           .row.flex__wrap 
-            .col__290
+            .col__290.col__290_bottom
               .section-geo__wrapper
                 a(href="").section-geo__a  http://www.historia-shop.by
                 .section-geo__geo.row.between
